--- a/jwt/views/index.ejs
+++ b/jwt/views/index.ejs
@@ -3,10 +3,11 @@
   <head>
     <title>JWT</title>
     <link rel='stylesheet' href='/css/style.css' />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.22.0/axios.min.js"></script>
   </head>
 
   <body>
-    <form action="" class="loginForm">
+    <form action="" name ="loginForm" class="loginForm">
       <input type="text" name="login" placeholder="login">
       <input type="password" name="pwd" placeholder="password">
       <button type="submit">login</button><br><br>
